# PromptWars

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/agents/: cache.py  graph.py  schemas.py  state.py
backend/agents/nodes/: budget_agent.py  graphiti_context.py  intent_extraction.py  planner.py  qdrant_search.py  validation.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: auth.py  destinations.py  itineraries.py  trips.py
backend/app/core/: config.py  database.py  firebase.py  redis.py  secrets.py
backend/app/events/: consumer.py  publisher.py  schemas.py
backend/app/middleware/: auth.py  cors.py  rate_limit.py  security.py
backend/app/models/: __init__.py  destination.py  itinerary.py  trip.py  user.py
backend/app/repositories/: itinerary_repository.py  trip_repository.py
backend/app/services/: amadeus.py  currency.py  maps.py  weather.py
frontend/: .env.local.example  Dockerfile  next.config.js  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/lib/: api.ts  auth.ts
frontend/store/: authStore.ts
infra/cloudrun/: backend-service.yaml  cloudbuild.yaml
infra/scripts/: deploy.sh  setup-gcp.ps1
monitoring/loki/: promtail-config.yml
services/geo-service/: Dockerfile  go.mod  go.sum  main.go
services/graphiti-service/: Dockerfile  pyproject.toml
services/graphiti-service/app/: config.py  database.py  main.py
services/graphiti-service/app/routers/: memory.py
(+19 files in other folders)
