[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travelai-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "langchain==0.2.0",
    "langgraph==0.1.0",
    "langchain-google-genai==1.0.5",
    "graphiti-core==0.3.0",
    "qdrant-client==1.9.1",
    "redis[hiredis]==5.0.4",
    "asyncpg==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "psycopg2-binary==2.9.9",
    "firebase-admin==6.5.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-jose[cryptography]==3.3.0",
    "httpx==0.27.0",
    "aio-pika==9.4.1",
    "structlog==24.1.0",
    "alembic==1.13.1",
    "greenlet==3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "ruff==0.4.4",
    "httpx==0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
