[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphiti-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "neo4j==5.20.0",
    "httpx==0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
